--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,4 @@
-#update parameter values copy to .env
 DB_HOST="DB HOST HERE"
-DB_NAME="mydb"
-DB_USER="admin"
-DB_PW="tiger1004"
+DB_NAME="database name here"
+DB_USER="db user here"
+DB_PW="Password Here"
