--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/code-squad/simple-lotto#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
+    "jest": "^29.0.1",
     "mysql2": "^2.3.3"
   }
 }
