--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Lotto using mysql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",    
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "repository": {
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/code-squad/simple-lotto#readme",
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "jest": "^29.0.1",
-    "mysql2": "^2.3.3"
+    "dotenv": "^16.0.1",    
+    "sqlite3": "^5.0.11"
   }
 }
